--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
     "typescript": "^4.9.5",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 8083",
     "build-storybook": "storybook build"
   },
   "eslintConfig": {
@@ -56,6 +57,7 @@
     "@storybook/react-webpack5": "^8.0.10",
     "@storybook/test": "^8.0.10",
     "eslint-plugin-storybook": "^0.8.0",
+    "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "storybook": "^8.0.10",
     "webpack": "^5.91.0"
